# vbi

./: .buildinfo  .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GDPR_COMPLIANCE.md  INSTALLATION.md  MANIFEST.in  README.md  _pre-commit-config.yaml  codemeta.json  environment.yml  feature_extraction.html  genindex.html  index.html  neural_mass.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run-vbi.sh  search.html  searchindex.js  setup.py  vbi-docker.sh
.doctrees/: environment.pickle  feature_extraction.doctree  index.doctree  neural_mass.doctree
.github/workflows/: docker-image.yml  documents.yml  publish.yml  tests.yml  update-codemeta.yml
_modules/: index.html
_modules/vbi/feature_extraction/: calc_features.html  features.html  features_settings.html  features_utils.html  utility.html
_sources/: feature_extraction.rst.txt  index.rst.txt  neural_mass.rst.txt
_static/: documentation_options.js
docs/: API.rst  Examples.rst  Makefile  conf.py  docker_build.rst  docker_quickstart.rst  examples_overview.rst  index.rst  inference_cde_guide.rst  inference_cde_maf_basic.rst  inference_cde_mdn_basic.rst  inference_examples.rst  installation.rst  legacy_examples.rst  limitations.rst  models.rst  neural_mass.rst  references.bib  requirements.txt  third_party_licenses.rst
docs/_static/: custom.css
docs/_templates/: base.html
docs/examples/: _mpr_sde_nb.ipynb  damp_oscillator.ipynb  damp_oscillator_cde.ipynb  distributions.ipynb  do_cpp.ipynb  do_nb.ipynb  ghb_sde_cupy.ipynb  ghb_sde_nb.ipynb  intro.ipynb  intro_fe.ipynb  intro_feature.ipynb  jansen_rit_sdde_cpp.ipynb  jansen_rit_sde_cpp.ipynb  jansen_rit_sde_cupy.ipynb  jansen_rit_sde_numba.ipynb  jansen_rit_sde_numba_cde.ipynb  km_sde_cpp.ipynb  km_sde_ts_cupy.ipynb  mpr_numba.ipynb  mpr_sde_cpp.ipynb  mpr_sde_cpp.py  mpr_sde_cupy.ipynb  mpr_sde_cupy_m.ipynb  mpr_sde_numba.ipynb  mpr_sde_numba_cde.ipynb  mpr_tvbk.ipynb  parameter_tables_cpp.py  parameter_tables_numba.py  plots.ipynb  rww_sde_numba.ipynb  rww_sde_pytorch.ipynb  rww_sde_torch_kong.ipynb  sl_sdde_cpp.ipynb  sl_sdde_numba.ipynb  vep_sde.ipynb  vep_sde_84.ipynb  vep_sde_cde_84.ipynb  vep_sde_numba.ipynb  vep_sde_numba_cde.ipynb  vep_sde_numba_cde_84.ipynb  (+10 more)
docs/examples/inference/: 01_gaussian_1d.py  02_gaussian_2d.py  03_two_moons.py  README.md  (+7 more)
examples/: damp_oscillator_cde.ipynb  damp_oscillator_ode.py  damp_oscillator_ts.py  do_cpp.py  do_nb.py  ghb_sde_cupy.py  ghb_sde_nb.py  helpers.py  intro.py  intro_fe.py  intro_feature.ipynb  jansen_rit_sdde_cpp.py  jansen_rit_sdde_ts.py  jansen_rit_sde_cpp.py  jansen_rit_sde_cupy.py  jansen_rit_sde_numba.ipynb  jansen_rit_sde_numba_cde.ipynb  jansen_rit_sde_ts.py  km_sde_cpp.py  km_sde_ts_cupy.py  make_notebook.sh  mpr_sde_cpp.ipynb  mpr_sde_cpp.py  mpr_sde_cupy.ipynb  mpr_sde_cupy.py  mpr_sde_numba_cde.ipynb  mpr_sde_ts.py  parameter_tables_cpp.py  rww_sde_numba.ipynb  rww_sde_pytorch.ipynb  sl_sdde_cpp.py  sl_sdde_numba.ipynb  sl_sdde_ts.py  vep_sde.py  vep_sde_numba.ipynb  vep_sde_numba_cde.ipynb  wc_ode_cpp.py  wilson_cowan_sde_numba.ipynb  ww_full_sde_cupy.ipynb  ww_full_sde_numba_cde.ipynb  (+2 more)
examples/inference/: 00_backend_selection.py  02_gaussian_2d.py  04_mdn_vs_maf.py  05_sequential_rounds.py  07_jax_vs_numpy.py  08_backend_benchmark.py  README.md  helpers.py  vbi_inference_mpr.ipynb
examples/notebooks/: damp_oscillator_ts.ipynb  helpers.py  intro.ipynb  jansen_rit_sdde_ts.ipynb  jansen_rit_sde_ts.ipynb  km_sde_ts.ipynb  mpr_sde_ts.ipynb  sl_sdde_ts.ipynb
examples/simulator_models/: benchmark_all_backends.py  benchmark_all_models.py  benchmark_cpp_vs_numpy_numba.py  benchmark_numba_vs_numpy.py  cuda_sweep_demo.py  custom_model_demo.py  feature_pipeline_demo.py  helpers.py  jansen_rit_demo.py  jax_demo.py  kuramoto_demo.py  model_equations.py  mpr_demo.py  reduced_wong_wang_demo.py  stimulation_demo.py  validate_sweep_backends.py  wilson_cowan_demo.py  wong_wang_demo.py
examples/workflows/: GALLERY_HEADER.rst  damp_oscillator_demo.py  jr_vbi (copy).py  jr_vbi.py  jr_vbi_sweep.py  mpr_sbi.py
github/workflows/: tests.yml
joss/: paper.bib  paper.md
notes/: PR_MI6_vbi_inference_review.md  PR_auto_generate_review.md  PR_cpp_simulator_backend_review.md  PR_numba_cuda_simulator_backend_review.md  PR_numba_simulator_backend_review.md  PR_numpy_simulator_backend_review.md  README.md  implementation_plan.md  milestone_jansen_rit_tvb_coupling.md  milestone_tvb_hybrid_backend_integration.md  milestones.md  milestones_documentation.md  milestones_feature_extraction.md  milestones_inference.md
paper/: paper.bib  paper.md
scripts/: setup_ebrains.sh
vbi/: __init__.py  _version.py  cde.py  inference.py  plot.py  sbi_inference.py  utils.py
vbi/dataset/: README.md  __init__.py
vbi/feature_extraction/: __init__.py  calc_features.py  features.json  features.py  features_settings.py  features_utils.py  features_utils_jax.py  features_utils_nb.py  jidt_worker.py  pipeline.py  pruner.py  utility.py
vbi/inference/: __init__.py  _api.py  _apt.py  _diagnostics.py  _embedding.py  _inference_pipeline.py  _mcmc.py  _posterior.py  _prior.py  _training.py  _utils.py  _vbi_inference.py
vbi/models/: __init__.py
vbi/papers/: __init__.py
vbi/simulator/: __init__.py  api.py
vbi/tests/: __init__.py  _test_mpr_cupy.py  _test_mpr_nb.py  all_tests.py  conftest.py  pytest.ini  quick_coverage.py  run_tests.py  test___init__.py  test_base_model_interface.py  test_boxuniform.py  test_cde.py  test_cupy_unified_api.py  test_diagnostics.py  test_fc_averaging_logic.py  test_fc_correlation_cost.py  test_fc_perfect_match.py  test_fcd_ks_cost.py  test_features.py  test_features_utils.py  test_features_utils_ext.py  test_get_fcd.py  test_get_fcd_jax.py  test_ghb_cupy.py  test_inference_api.py  test_jansen_rit_cpp.py  test_jax_backend.py  test_jidt_bridge.py  test_mi3_apt.py  test_mi4_mcmc.py  test_module2.py  test_mpr_cpp.py  test_mpr_cupy.py  test_mpr_numba.py  test_nsf_batch.py  test_optional_imports.py  test_plot.py  test_rww.py  test_sl.py  test_suite.py  (+2 more)
(+192 files in other folders)
