[build-system]
requires = [
    "hatchling",
    "setuptools", 
    "wheel",
    "swig>=4.0",
    "setuptools>=45"
]
build-backend = "setuptools.build_meta"

[project]
name = "vbi"
version = "0.2.1"
description = "Virtual brain inference."
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Abolfazl Ziaeemehr", email = "a.ziaeemehr@gmail.com" },
    { name = "Meysam Hashemi", email = "meysam.hashemi@gmail.com" },
    { name = "Marmaduke Woodman", email = "marmaduke.woodman@gmail.com" }
]
readme = "README.md"
dependencies = [
    "wheel",
    "numpy",
    "scipy",
    "numba",
    "h5py",
    "pandas",
    "networkx",
    "nbconvert",
    "matplotlib",
    "setuptools-scm",
    "tqdm",
    "sbi",
    "torch",
    "parameterized",
    "scikit-learn",
    "pycatch22",
    "pytest",
    "swig",
    "rich"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://ziaeemehr.github.io/vbi_paper/"
repository = "https://github.com/Ziaeemehr/vbi_paper"

[tool.hatch.version]
path = "vbi/_version.py"
include-package-data = true

[tool.setuptools.package-data]
vbi = [
    "models/pytorch/data/*", 
    "models/cpp/_src/*",
]
"vbi.tests" = ["*"]  # Include all files in tests/

[project.optional-dependencies]
dev = []
docs = [
    "sphinx",
    "numpydoc",
    "nbformat",
    "nbsphinx",
    "cloud_sptheme",
    "sphinx_bootstrap_theme",
]
cu = ["cupy"]
all = [
    "pytest",
    "sphinx",
    "numpydoc",
    "nbformat",
    "nbsphinx",
    "cloud_sptheme",
    "sphinx_bootstrap_theme",
    "cupy",
]