[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "vbi"
dynamic = ["version"]
description = "Virtual brain inference — fast simulation and parameter estimation."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abolfazl Ziaeemehr",  email = "a.ziaeemehr@gmail.com" },
    { name = "Meysam Hashemi",      email = "meysam.hashemi@gmail.com" },
    { name = "Marmaduke Woodman",   email = "marmaduke.woodman@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# ---------------------------------------------------------------------------
# Core dependencies — always required (light, CPU-only simulation)
# ---------------------------------------------------------------------------
# Install:  pip install vbi
#
# Provides: NumPy + Numba backends (no C++, no GPU, no inference)
# ---------------------------------------------------------------------------
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "numba>=0.57",
    "h5py",
    "pandas",
    "matplotlib",
    "tqdm",
    "scikit-learn",
]

[project.urls]
homepage   = "https://github.com/ins-amu/vbi"
repository = "https://github.com/ins-amu/vbi"

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]

# ---- Backend accelerators (pick what you have) ----

# C++ pybind11 simulator backend (auto-compiled at first use; requires g++/cmake)
# Install:  pip install vbi[cpp]
cpp = [
    "mako>=1.2",
    "pybind11>=2.10",
]

# JAX backend (CPU-only by default; for GPU: pip install jax[cuda12_pip] separately)
# Install:  pip install vbi[jax]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

# CUDA / Numba-CUDA backend (numba[cuda] is the same package as numba)
# No extra packages needed — numba ships CUDA support.
# Requires NVIDIA GPU + CUDA toolkit installed on the system.
# Install:  pip install vbi  (then ensure CUDA toolkit is on PATH)
cuda = []

# ---- Inference frameworks ----

# Simulation-based inference with sbi + PyTorch (CPU)
# Install:  pip install vbi[sbi]
sbi = [
    "sbi>=0.22",
    "torch>=2.0",
]

# sbi + PyTorch with GPU support  (install CUDA-enabled torch separately if needed)
# Install:  pip install vbi[sbi-gpu]
sbi-gpu = [
    "sbi>=0.22",
    "torch>=2.0",
    "cupy",
]

# ---- Convenience bundles ----

# Everything a researcher needs on a CPU workstation
# Install:  pip install vbi[full-cpu]
full-cpu = [
    "mako>=1.2",
    "pybind11>=2.10",
    "jax>=0.4",
    "jaxlib>=0.4",
    "sbi>=0.22",
    "torch>=2.0",
]

# Full install including GPU libraries (assumes CUDA toolkit is present)
# Install:  pip install vbi[full-gpu]
full-gpu = [
    "mako>=1.2",
    "pybind11>=2.10",
    "jax>=0.4",
    "jaxlib>=0.4",
    "sbi>=0.22",
    "torch>=2.0",
    "cupy",
]

# ---- Development and CI ----

# Testing and development tools
# Install:  pip install vbi[dev]
dev = [
    "pytest>=7",
    "pytest-cov",
    "mako>=1.2",
    "pybind11>=2.10",
]

# CI fast checks (no C++ compilation, no GPU)
# Install:  pip install vbi[ci]
ci = [
    "pytest>=7",
    "pytest-cov",
]

# Documentation
# Install:  pip install vbi[docs]
docs = [
    "sphinx>=7",
    "numpydoc",
    "nbformat",
    "nbsphinx",
    "furo",
    "nbconvert",
]

# ---- Legacy aliases (kept for backward compatibility) ----
light       = []
light-gpu   = ["cupy"]
inference   = ["sbi>=0.22", "torch>=2.0"]
inference-gpu = ["sbi>=0.22", "torch>=2.0", "cupy"]
cu          = ["cupy"]
all         = ["mako>=1.2", "pybind11>=2.10", "jax>=0.4", "jaxlib>=0.4",
               "sbi>=0.22", "torch>=2.0", "cupy",
               "sphinx>=7", "numpydoc", "nbformat", "nbsphinx", "furo"]
all-docker  = ["mako>=1.2", "pybind11>=2.10", "jax>=0.4", "jaxlib>=0.4",
               "sbi>=0.22", "torch>=2.0",
               "sphinx>=7", "numpydoc", "nbformat", "nbsphinx", "furo"]

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "vbi/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["vbi*"]

[tool.setuptools.package-data]
vbi = [
    "models/pytorch/data/*",
    "models/cpp/_src/*.h",
    "models/cpp/_src/*.i",
    "models/cpp/_src/*.py",
    "simulator/backend/cpp/_src/*.mako",
    "simulator/backend/cpp/_src/*.hpp",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["vbi/tests"]
markers = [
    "slow: tests with long runtimes (>3 s each); skipped in fast CI",
    "fast: alias — explicitly fast tests (always run)",
    "cuda_fast: deterministic CUDA tests; short duration; GPU required",
    "cuda_slow: stochastic/large-N CUDA tests; GPU required",
    # Legacy aliases
    "short: alias for fast",
    "long: alias for slow",
]
